tests/lean/1707.lean.expected.out
1707.lean:1:9-1:12: error: invalid field index
1707.lean:1:12-1:13: error: unexpected identifier; expected command
